--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "ryan.trout"
         minSdkVersion 22
@@ -20,13 +20,18 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.mcxiaoke.volley:library-aar:1.0.0'
-    compile 'com.google.maps.android:android-maps-utils:0.5'
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    testCompile 'junit:junit:4.12'
-    compile 'com.google.android.gms:play-services-maps:11.0.4'
+    testImplementation 'junit:junit:4.12'
+
+    implementation 'com.mcxiaoke.volley:library-aar:1.0.0'
+    implementation 'com.google.maps.android:android-maps-utils:0.5'
+    implementation 'com.android.support:design:25.0.0'
+    implementation 'com.android.support:appcompat-v7:25.0.0'
+    implementation 'com.google.android.gms:play-services-maps:15.0.0'
+    implementation 'com.google.android.gms:play-services-location:15.0.0'
+
 }
